--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -103,7 +103,7 @@
     <!-- Scripts -->
     <script type="text/javascript" defer src="{{ ASSET_PATH }}/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" defer src="{{ ASSET_PATH }}/bootstrap-4.0/js/bootstrap.min.js"></script>
-    {% if page.url == "/pages/search.html" %}<script type="text/javascript" defer src="/assets/js/search_box.js"></script>{% endif %}
+    <script type="text/javascript" defer src="/assets/js/search_box.js"></script>
     {% include widgets/baidu_share %}
     {% include widgets/back_top_button %}
 </body>
