--- a/assets/themes/lei-metro/css/toc.css
+++ b/assets/themes/lei-metro/css/toc.css
@@ -1,55 +1,60 @@
 /*目录序号*/
+#markdown-toc ul, ul[id=markdown-toc] {
+	padding-left: 0;
+	list-style: none;
+}
+
 #markdown-toc li:before {
-    content: counter(toc1)" ";
+	content: counter(toc1)" ";
 }
 
 #markdown-toc ul li:before {
-    content: counter(toc1)"."counter(toc2)" ";
+	content: counter(toc1)"."counter(toc2)" ";
 }
 
 #markdown-toc ul ul li:before {
-    content: counter(toc1)"."counter(toc2)"."counter(toc3)" ";
+	content: counter(toc1)"."counter(toc2)"."counter(toc3)" ";
 }
 
 #markdown-toc li {
-    counter-increment: toc1;
-    counter-reset: toc3;
-    counter-reset: toc2;
+	counter-increment: toc1;
+	counter-reset: toc3;
+	counter-reset: toc2;
 }
 
 #markdown-toc ul li {
-    counter-increment: toc2;
-    counter-reset: toc3;
+	counter-increment: toc2;
+	counter-reset: toc3;
 }
 
 #markdown-toc ul ul li {
-    counter-increment: toc3;
+	counter-increment: toc3;
 }
 
 /*由于jekyll模板是把post文章内的h1作为标题的，所以从h2开始计数*/
 article section h2:before {
-    content: counter(sect1)" ";
+	content: counter(sect1)" ";
 }
 
 article section h3:before {
-    content: counter(sect1)"."counter(sect2)" ";
+	content: counter(sect1)"."counter(sect2)" ";
 }
 
 article section h4:before {
-    content: counter(sect1)"."counter(sect2)"."counter(sect3)" ";
+	content: counter(sect1)"."counter(sect2)"."counter(sect3)" ";
 }
 
 article section h2 {
-    counter-increment: sect1;
-    counter-reset: sect3;
-    counter-reset: sect2;
+	counter-increment: sect1;
+	counter-reset: sect3;
+	counter-reset: sect2;
 }
 
 article section h3 {
-    counter-increment: sect2;
-    counter-reset: sect3;
+	counter-increment: sect2;
+	counter-reset: sect3;
 }
 
 article section h4 {
-    counter-increment: sect3;
+	counter-increment: sect3;
 }
