--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/widgets/bootstrap-4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.min.css">
     {% unless page.id == empty %}<link rel="stylesheet" href="{{ ASSET_PATH }}/css/toc.min.css">{% endunless %}
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/pygments.min.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.min.css">
 </head>
 <body>
     <header id="header" style="background: #373c3a">
