--- a/_includes/themes/lei-metro/post.html
+++ b/_includes/themes/lei-metro/post.html
@@ -1,5 +1,5 @@
 <nav id="nav-crumb">
-<ol class="breadcrumb my-2" style="background:transparent">
+<ol class="breadcrumb px-0" style="background:transparent">
   <li class="breadcrumb-item"><a href="/">Home</a></li>
   {% if page.group %}
   <li class="breadcrumb-item"><a href="/pages/{{page.group | downcase}}categories.html">{{ page.group }}</a></li>
