--- a/assets/widgets/smusic/css/smusic.css
+++ b/assets/widgets/smusic/css/smusic.css
@@ -54,33 +54,30 @@ html,body{
 
 /*SMusic*/
 .grid-music-container{
-    width: auto;/*520px;*/
-    height: auto;/*676px;*/
-    padding: 20px;
+    /*width: auto;/*520px;*/
+    /*height: auto;/*676px;*/
+    /*padding: 20px;
     position: relative;
-    /*top: 50%;
+    top: 50%;
     left: 50%;
     margin-top: -158px;
     margin-left: -280px;*/
-    /*background-color: rgba(255,255,255,.7);*/
     background-color: rgba(195,222,249,1);
     font-family: "Microsoft Yahei","微软雅黑","Helvetica Neue","Hiragino Sans GB",Helvetica,Tahoma,sans-serif;
     text-shadow: 1px 0 0 rgba(255,255,255,.7);
 }
 
 .grid-music-container .m-music-play-wrap{
-    height: 150px;
-    position: relative;
-    padding-left: 120px;
+    /*min-height: 150px;*/
 }
 .grid-music-container .u-cover{
     width: 121px;
     height: 121px;
     overflow: hidden;
     background: url(/assets/widgets/smusic/img/music_icons.png) 0 0 no-repeat;
-    position: absolute;
+ /*   position: absolute;
     top: 0;
-    left: 0;
+    left: 0;*/
 }
 .grid-music-container .u-cover img{
     display: block;
@@ -116,7 +113,7 @@ html,body{
 }
 
 .grid-music-container .m-now-info{
-    margin-left: 25px;
+    /*margin-left: 25px;*/
     height: 100%;
 }
 .grid-music-container .m-now-info h1{
