--- a/_includes/themes/lei-metro/custom.html
+++ b/_includes/themes/lei-metro/custom.html
@@ -59,5 +59,7 @@
     </footer>
     {% include widgets/baidu_share %}
     {% include widgets/back_top_button %}
+    <script defer src="/assets/widgets/jquery-3.1/js/jquery-3.1.1.min.js"></script>
+    <script defer src="/assets/widgets/bootstrap-4.0/js/bootstrap.min.js"></script>
 </body>
 </html>
