fixed soft carousel,change girlcard to div

--- a/_includes/themes/lei-metro/custom.html
+++ b/_includes/themes/lei-metro/custom.html
@@ -60,6 +60,7 @@
     {% include widgets/baidu_share %}
     {% include widgets/back_top_button %}
     <script defer src="/assets/widgets/jquery-3.1/js/jquery-3.1.1.min.js"></script>
+    <script defer src="/assets/widgets/tether-1.4/js/tether.min.js"></script>
     <script defer src="/assets/widgets/bootstrap-4.0/js/bootstrap.min.js"></script>
 </body>
 </html>
