--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -30,8 +30,7 @@
                 </nav>
             </div>
             <section class="text-xs-center hidden-xs-down pt-1 pb-2 text-white">
-                <h2>If you do not leave me</h2>
-                <h2> I will be by your side until the end.</h2>
+                <script>document.wirte("<h2>If you do not leave me</h2><h2> I will be by your side until the end.</h2>");</script>
             </section>
         </div>
     </header>
@@ -71,14 +70,14 @@
         </div>
     </section>
     <main id="main" class="container py-1">
-        {% if is_production %} {{ content | strip }} {% else %} {{ content }} {% endif %}
+        {% if is_production %} {{ content | strip_newlines | replace: "    ", " " | replace: "   ", " " | replace: "  ", " " }} {% else %} {{ content}} {% endif %}
     </main>
     <section id="nav-bottom" class="container">
         <hr class="my-1" />
         <nav class="row text-xs-center db-footer-links px-3">
-            <a class="col-md-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
-            <a class="col-md-4" href="{{ site.JB.messages_path }}" rel="nofollow">留言板</a>
-            <a class="col-md-4" href="{{ site.JB.about_path }}" rel="nofollow">关&nbsp;于</a>
+            <a class="col-xs-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
+            <a class="col-xs-4" href="{{ site.JB.messages_path }}" rel="nofollow">留言板</a>
+            <a class="col-xs-4" href="{{ site.JB.about_path }}" rel="nofollow">关&nbsp;于</a>
         </nav>
         <hr class="my-1" />
     </section>
@@ -98,9 +97,10 @@
     <!-- Scripts -->
     <script defer src="/assets/widgets/jquery-3.1/js/jquery-3.1.1.min.js"></script>
     <script defer src="/assets/widgets/tether-1.4/js/tether.min.js"></script>
+    <script defer src="{{ ASSET_PATH }}/style.js"></script>
     <script defer src="/assets/widgets/bootstrap-4.0/js/bootstrap.min.js"></script>
     {% if page.id == "search" %}<script defer src="/assets/widgets/search_box.js"></script> {% endif %}
-    {% if is_production and page.content contains "$" %} {% include widgets/mathjax %} {% endif %}
+    {% if page.content contains "$" %} {% include widgets/mathjax %} {% endif %}
     {% include widgets/baidu_share %}
     {% include widgets/back_top_button %}
 </body>
