--- a/assets/themes/lei-metro/css/style.css
+++ b/assets/themes/lei-metro/css/style.css
@@ -41,3 +41,21 @@
 .active .nav-link{
   font-weight: bold;
 }
+#page h2, #post h2{
+margin-top:2.5rem;
+margin-bottom:0.5rem;
+}
+#post h3{
+margin-top:1.5rem;
+margin-bottom:0.5rem;
+}
+#post h4{
+margin-top:1rem;
+margin-bottom:0.5rem;
+}
+table{
+border-collapse:collapse;
+}
+table, td, th{
+border:1px solid gray;
+}
