--- a/_includes/themes/lei-metro/post.html
+++ b/_includes/themes/lei-metro/post.html
@@ -13,7 +13,7 @@
 
 <article id="post">
   <header>
-    <h1>{{ page.title }}{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+    <h1><a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
     <p class="text-muted">
        <small>{{ page.date | date_to_long_string }}</small>
     </p>
