--- a/assets/themes/lei-metro/css/syntax.css
+++ b/assets/themes/lei-metro/css/syntax.css
@@ -1,209 +1,230 @@
-.highlight table td { padding: 5px; }
-.highlight table pre { margin: 0; }
-.highlight .cm {
-  color: #999988;
-  font-style: italic;
+.highlight table td {
+	padding: 5px
 }
-.highlight .cp {
-  color: #999999;
-  font-weight: bold;
+
+.highlight table pre {
+	margin: 0
 }
-.highlight .c1 {
-  color: #999988;
-  font-style: italic;
+
+.highlight pre.highlight {
+	padding: .5em
 }
-.highlight .cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic;
+
+pre.highlight ::-moz-selection {
+	background-color: #efefef
 }
-.highlight .c, .highlight .cd {
-  color: #999988;
-  font-style: italic;
+
+pre.highlight ::selection {
+	background-color: #efefef
 }
-.highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2;
+
+pre.highlight code ::-moz-selection,pre.highlight span ::-moz-selection {
+	background-color: #efefef
 }
-.highlight .gd {
-  color: #000000;
-  background-color: #ffdddd;
+
+pre.highlight code ::selection,pre.highlight span ::selection {
+	background-color: #efefef
 }
-.highlight .ge {
-  color: #000000;
-  font-style: italic;
-}
-.highlight .gr {
-  color: #aa0000;
-}
-.highlight .gh {
-  color: #999999;
-}
-.highlight .gi {
-  color: #000000;
-  background-color: #ddffdd;
-}
-.highlight .go {
-  color: #888888;
-}
-.highlight .gp {
-  color: #555555;
-}
-.highlight .gs {
-  font-weight: bold;
-}
-.highlight .gu {
-  color: #aaaaaa;
-}
-.highlight .gt {
-  color: #aa0000;
-}
-.highlight .kc {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .kd {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .kn {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .kp {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .kr {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .kt {
-  color: #445588;
-  font-weight: bold;
-}
-.highlight .k, .highlight .kv {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .mf {
-  color: #009999;
-}
-.highlight .mh {
-  color: #009999;
-}
-.highlight .il {
-  color: #009999;
-}
-.highlight .mi {
-  color: #009999;
-}
-.highlight .mo {
-  color: #009999;
-}
-.highlight .m, .highlight .mb, .highlight .mx {
-  color: #009999;
-}
-.highlight .sb {
-  color: #d14;
-}
-.highlight .sc {
-  color: #d14;
-}
-.highlight .sd {
-  color: #d14;
-}
-.highlight .s2 {
-  color: #d14;
-}
-.highlight .se {
-  color: #d14;
-}
-.highlight .sh {
-  color: #d14;
-}
-.highlight .si {
-  color: #d14;
-}
-.highlight .sx {
-  color: #d14;
-}
-.highlight .sr {
-  color: #009926;
-}
-.highlight .s1 {
-  color: #d14;
-}
-.highlight .ss {
-  color: #990073;
-}
-.highlight .s {
-  color: #d14;
-}
-.highlight .na {
-  color: #008080;
-}
-.highlight .bp {
-  color: #999999;
-}
-.highlight .nb {
-  color: #0086B3;
-}
-.highlight .nc {
-  color: #445588;
-  font-weight: bold;
-}
-.highlight .no {
-  color: #008080;
-}
-.highlight .nd {
-  color: #3c5d5d;
-  font-weight: bold;
-}
-.highlight .ni {
-  color: #800080;
-}
-.highlight .ne {
-  color: #990000;
-  font-weight: bold;
-}
-.highlight .nf {
-  color: #990000;
-  font-weight: bold;
-}
-.highlight .nl {
-  color: #990000;
-  font-weight: bold;
-}
-.highlight .nn {
-  color: #555555;
-}
-.highlight .nt {
-  color: #000080;
-}
-.highlight .vc {
-  color: #008080;
-}
-.highlight .vg {
-  color: #008080;
-}
-.highlight .vi {
-  color: #008080;
-}
-.highlight .nv {
-  color: #008080;
-}
-.highlight .ow {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .o {
-  color: #000000;
-  font-weight: bold;
-}
-.highlight .w {
-  color: #bbbbbb;
-}
+
 .highlight {
-  background-color: #f8f8f8;
+	background: #fff;
+	color: #929292
+}
+
+.highlight .hll {
+	background-color: #efefef
+}
+
+.highlight .c {
+	color: #929292
+}
+
+.highlight .err {
+	background: #c82829;
+	color: #fff
+}
+
+.highlight .k {
+	color: #8959a8
+}
+
+.highlight .l {
+	color: #f5871f
+}
+
+.highlight .n {
+	color: #929292
+}
+
+.highlight .o {
+	color: #545454
+}
+
+.highlight .c1,.highlight .cm,.highlight .cp,.highlight .cs,.highlight .p {
+	color: #929292
+}
+
+.highlight .gd {
+	color: #c82829
+}
+
+.highlight .ge {
+	font-style: italic
+}
+
+.highlight .gh {
+	color: #545454;
+	font-weight: 700
+}
+
+.highlight .gi {
+	color: #718c00
+}
+
+.highlight .gp {
+	color: #718c00
+}
+
+.highlight .gp,.highlight .gs,.highlight .gu {
+	font-weight: 700
+}
+
+.highlight .gu {
+	color: #3e999f
+}
+
+.highlight .kc,.highlight .kd {
+	color: #8959a8
+}
+
+.highlight .kn {
+	color: #3e999f
+}
+
+.highlight .kp {
+	color: #4271ae
+}
+
+.highlight .kr {
+	color: #8959a8
+}
+
+.highlight .kt {
+	color: #eab700
+}
+
+.highlight .ld {
+	color: #718c00
+}
+
+.highlight .m {
+	color: #f5871f
+}
+
+.highlight .s {
+	color: #718c00
+}
+
+.highlight .na,.highlight .nb {
+	color: #4271ae
+}
+
+.highlight .nc,.highlight .no {
+	color: #eab700
+}
+
+.highlight .nd {
+	color: #3e999f
+}
+
+.highlight .ni {
+	color: #545454
+}
+
+.highlight .ne {
+	color: #c82829
+}
+
+.highlight .nf {
+	color: #4271ae
+}
+
+.highlight .nl {
+	color: #545454
+}
+
+.highlight .nn {
+	color: #eab700
+}
+
+.highlight .nx {
+	color: #4271ae
+}
+
+.highlight .py {
+	color: #545454
+}
+
+.highlight .nt {
+	color: #3e999f
+}
+
+.highlight .nv {
+	color: #c82829
+}
+
+.highlight .ow {
+	color: #3e999f
+}
+
+.highlight .w {
+	color: #545454
+}
+
+.highlight .mf,.highlight .mh,.highlight .mi,.highlight .mo {
+	color: #f5871f
+}
+
+.highlight .sb {
+	color: #718c00
+}
+
+.highlight .sc {
+	color: #545454
+}
+
+.highlight .sd {
+	color: #929292
+}
+
+.highlight .s2 {
+	color: #718c00
+}
+
+.highlight .se {
+	color: #f5871f
+}
+
+.highlight .sh {
+	color: #718c00
+}
+
+.highlight .si {
+	color: #f5871f
+}
+
+.highlight .s1,.highlight .sr,.highlight .ss,.highlight .sx {
+	color: #718c00
+}
+
+.highlight .bp {
+	color: #545454
+}
+
+.highlight .vc,.highlight .vg,.highlight .vi {
+	color: #c82829
+}
+
+.highlight .il {
+	color: #f5871f
 }
