--- a/assets/themes/lei-metro/css/style.css
+++ b/assets/themes/lei-metro/css/style.css
@@ -1,9 +1,4 @@
-/* 行内强制不换行显示省略号*/
-.nobr {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
+/*mobile nav and search*/
 @media (min-width: 576px) {
   .w-search {
     max-width: 300px;
@@ -15,16 +10,12 @@
   #nav-main div{
     padding: 0 1.5rem;
   }
-  #content{
-    padding: 1.5rem 1.5rem 0  1.5rem;
-  }
-  #content-footer{
-    padding: 0 1.5rem;
-  }
 }
+/*footer*/
 #footer{
   background-color: #f5f5f5;
 }
+/*tag box*/
 .tag_box{
   padding-left: 0;
   list-style: none;
@@ -34,26 +25,17 @@
   display: inline-block;
   margin-right: 1rem;
 }
-/*code*/
-.highlight code, .highlight table{
-  border: 1px solid #ddd;
-  border-radius: 3px;
+/* 行内强制不换行显示省略号*/
+.nobr {
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 }
-.highlight th, .highlight td{
-  border: none
-}
-.highlight .lineno{
-color: gray;
-padding-left:4px;
-padding-right:10px;
-}
-.highlight table tr td:first-child{
-background-color:#dfdfdf;
-}
-
+/*navbar-main actived*/
 .active .nav-link{
   font-weight: bold;
 }
+/*post header title*/
 #page h2, #post h2{
 margin-top:2.5rem;
 margin-bottom:0.5rem;
@@ -66,9 +48,28 @@ margin-bottom:0.5rem;
 margin-top:1rem;
 margin-bottom:0.5rem;
 }
+/*table*/
 table{
 border-collapse:collapse;
 }
 table, td, th{
 border:1px solid gray;
+}
+/*code*/
+.highlight{
+  border: 1px solid #ddd;
+  /*border-radius: 2px;*/
+  margin: 0 0 5px 5px;
+}
+.highlight table, .highlight th, .highlight td{
+  border: none
+}
+.highlight .lineno{
+color: gray;
+padding-right:4px;
+}
+.highlight table tr td:first-child{
+background-color:#efe;
+min-width:35px;
+width:1%;
 }
