--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -70,7 +70,7 @@
         </div>
     </section>
     <main id="main" class="container py-1">
-        {% if is_production %} {% if page.content contains 'code' %} {{ content }} {% else %} {{ content | strip_newlines | replace: "                      ", " " | replace: "     ", " " | replace: "   ", " " | replace: "  ", " " }} {% endif %}
+        {% if is_production %} {% if page.content contains 'code' or page.content contains 'pre' %} {{ content }} {% else %} {{ content | strip_newlines | replace: "                      ", " " | replace: "     ", " " | replace: "   ", " " | replace: "  ", " " }} {% endif %}
          {% else %} {{ content}} {% endif %}
     </main>
     <section id="nav-bottom" class="container">
