diaplay Coding for the group IT

--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="{{ site.JB.pkmcategories_path }}" rel="nofollow">PKM</a>
                         </li>
                         <li class="nav-item {% if page.id == 'it' %} active {% endif %}">
-                            <a class="nav-link" href="{{ site.JB.itcategories_path }}" rel="nofollow">IT</a>
+                            <a class="nav-link" href="{{ site.JB.itcategories_path }}" rel="nofollow">Coding</a>
                         </li>
                         <li class="nav-item {% if page.id == 'design' %} active {% endif %}">
                             <a class="nav-link" href="{{ site.JB.designcategories_path }}" rel="nofollow">Design</a>
