--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -43,17 +43,17 @@
                         <li class="nav-item {% if page.id == "home" %} active {% endif %}">
                             <a class="nav-link" href="/" rel="nofollow">Home</a>
                         </li>
-                        <li class="nav-item {% if page.id == 'pkm' %} active {% endif %}">
-                            <a class="nav-link" href="{{ site.JB.pkmcategories_path }}" rel="nofollow">PKM</a>
+                        <li class="nav-item {% if page.id == site.JB.group1_name %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.group1_path }}" rel="nofollow">{{site.JB.group1_name}}</a>
                         </li>
-                        <li class="nav-item {% if page.id == 'it' %} active {% endif %}">
-                            <a class="nav-link" href="{{ site.JB.itcategories_path }}" rel="nofollow">Coding</a>
+                        <li class="nav-item {% if page.id == site.JB.group2_name %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.group2_path }}" rel="nofollow">{{site.JB.group2_name}}</a>
                         </li>
-                        <li class="nav-item {% if page.id == 'design' %} active {% endif %}">
-                            <a class="nav-link" href="{{ site.JB.designcategories_path }}" rel="nofollow">Design</a>
+                        <li class="nav-item {% if page.id == site.JB.group3_name %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.group3_path }}" rel="nofollow">{{site.JB.group3_name}}</a>
                         </li>
-                        <li class="nav-item {% if page.id == 'life' %} active {% endif %}">
-                            <a class="nav-link" href="{{ site.JB.lifecategories_path }}" rel="nofollow">Life</a>
+                        <li class="nav-item {% if page.id == site.JB.group4_name %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.group4_path }}" rel="nofollow">{{site.JB.group4_name}}</a>
                         </li>
                         <li class="nav-item {% if page.id == 'music' %} active {% endif %}">
                             <a class="nav-link" href="{{ site.JB.music_path }}" rel="nofollow">音乐</a>
