change commit to gitalk

--- a/_includes/themes/lei-metro/custom.html
+++ b/_includes/themes/lei-metro/custom.html
@@ -31,7 +31,7 @@
  
  {% if page.comments == true %}
 <section class="container">
-{% include widgets/uyan_comment %}
+{% include widgets/comment %}
 </section>
 {% endif %}
  
