--- a/_includes/themes/lei-metro/page.html
+++ b/_includes/themes/lei-metro/page.html
@@ -4,6 +4,6 @@
 
 {% if page.comments == true %}
 <section>
-{% include widgets/uyan_comment %}
+{% include widgets/comment %}
 </section>
 {% endif %}
