--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -100,6 +100,8 @@
     <script defer src="{{ ASSET_PATH }}/style.js"></script>
     <script defer src="/assets/widgets/bootstrap-4.0/js/bootstrap.min.js"></script>
     {% if page.id == "search" %}<script defer src="/assets/widgets/search_box.js"></script> {% endif %}
+    {% unless page.comment==false %}
+    {% include widgets/comments/gitalk_script %} {% endunless %}    
     {% if page.content contains "$" or page.content contains "{equation" %} {% include widgets/mathjax %} {% endif %}
     {% include widgets/baidu_share %}
     {% include widgets/back_top_button %}
