修改post，修改group tag问题

--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -85,7 +85,7 @@
     <footer id="footer" class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;min-width: 100px;" alt="二维码" /></div>
+                <div class="col-md-4 text-xs-center"><img src="/assets/qr.png" style="width: 200px;" alt="二维码" /></div>
                 <div class="col-md-8">
                     <p><small>{% include widgets/statcounter %}</small></p>
                     <p s><small>&copy; 2013-{{ site.time | date: '%Y' }} <a href="http://weibo.com/hustlei" target="_blank" title="Author's Sina Wibo Main Page">lileilei</a> All Rights Reserved.</small></p>
