--- a/_includes/themes/lei-metro/post.html
+++ b/_includes/themes/lei-metro/post.html
@@ -1,16 +1,4 @@
-<nav id="nav-crumb">
-<ol class="breadcrumb px-0" style="background:transparent">
-  <li class="breadcrumb-item"><a href="/">Home</a></li>
-  {% if page.group %}
-      <li class="breadcrumb-item">{% for g in site.JB.groups %} {% if g.name == page.group %}
-      <a href={{ g.path }}>{{ g.disp }}</a></li>
-      {% if page.categories != empty %}
-      <li class="breadcrumb-item"><a href="{{ g.path }}#{{ category[0] }}-ref">分类</a></li>
-  {% endif %}{% endif %}{% endfor %}{% endif %}
-  <li class="breadcrumb-item active">正文</li>
-</ol>
-</nav>
-
+{% include widgets/nav_crumb %}
 <article id="post">
   <header>
     <h1><a href="{{ site.root }}{{ page.url }}">{{ page.title }}</a>{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
