--- a/_includes/themes/lei-metro/post.html
+++ b/_includes/themes/lei-metro/post.html
@@ -46,7 +46,7 @@
   </footer>
 
 </article>
-
+{% include widgets/highlightjs %}
 <section id="comments">
   {% include widgets/comment %}
 </section>
