--- a/_includes/themes/lei-metro/post.html
+++ b/_includes/themes/lei-metro/post.html
@@ -1,7 +1,8 @@
 {% include widgets/nav_crumb %}
 <article id="post">
   <header>
-    <h1><a href="{{ site.root }}{{ page.url }}">{{ page.title }}</a>{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+    <h1><a href="{{ page.url }}">{{ page.title }}</a>{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+    {% if page.subtitle %}<p class="text-muted"><big>——{{ page.subtitle }}</big></p> {% endif %}
     <p class="text-muted">
        <small>{{ page.date | date: "%Y-%m-%d" }}</small>&nbsp;<small>({{ page.revision.date | date: "%Y-%m-%d" }}更新)</small>
     </p>
