change header background to image

--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -20,7 +20,7 @@
     <script defer src="/assets/widgets/tether-1.4/js/tether.min.js"></script>
 </head>
 <body>
-    <header id="header" style="background: #373c3a">
+    <header id="header" style="background: #373c3a url(./assets/header_bg.jpg); background-size:100%; background-position:center">
         <div class="container pr-0">
             <div class="clearfix navbar-dark">
                 <button class="navbar-toggler float-xs-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#nav-header"></button>
