--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -104,5 +104,6 @@
   s.parentNode.insertBefore(bp, s);
 })();
 </script>{% endif %}
+<a href="https://github.com/hustlei"><img src="/assets/github-ribbons/images/forkme_right_gray_6d6d6d.svg" style="position:absolute;top:0;right:0;" alt="Fork me on GitHub"></a>
 </body>
 </html>
